--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site-wide settings
 # ------------------
 #
-# title: Your awesome title
+# title: Matthew Yun's Projects
 #
 # author:
 #   name: GitHub User
