--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # title: Matthew Yun's Projects
 #
 # author:
-#   name: GitHub User
-#   email: your-email@domain.com
+#   name: Matthew Yun
+#   email: myun1245@outlook.com
 #
 # The `>` after `description:` means to ignore line-breaks until next key. If
 #   you wish to omit the line-break after the end of text, use `>-` instead.
